Создано с помощью Colaboratory

--- a/CRYPTO_лаб_0.ipynb
+++ b/CRYPTO_лаб_0.ipynb
@@ -57,7 +57,7 @@
       "source": [
         "import hashlib"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -76,19 +76,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4edc89a4-7582-4ec4-a784-23bbd3f46b5f"
+        "outputId": "9b93b082-bea5-40e5-ca67-d9b2e8570bcb"
       },
       "source": [
         "print(hashlib.algorithms_available)\n",
         "print(hashlib.algorithms_guaranteed)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'sha512', 'sha3_512', 'blake2s256', 'sha224', 'sha3_384', 'blake2s', 'sha512-224', 'sha3-512', 'ripemd160', 'blake2b', 'sha256', 'sm3', 'shake128', 'md5', 'sha3_256', 'sha384', 'sha512-256', 'sha1', 'sha3-384', 'shake_256', 'whirlpool', 'shake256', 'sha3_224', 'blake2b512', 'md4', 'sha3-224', 'sha3-256', 'shake_128', 'md5-sha1'}\n",
-            "{'sha512', 'md5', 'sha3_256', 'sha3_512', 'shake_128', 'shake_256', 'sha224', 'sha3_384', 'sha384', 'sha1', 'blake2s', 'blake2b', 'sha3_224', 'sha256'}\n"
+            "{'sha224', 'shake_128', 'sha3_384', 'sha512', 'sha1', 'blake2s', 'blake2b', 'sha384', 'sha256', 'sha3_224', 'sha3_512', 'md5', 'sha3_256', 'shake_256'}\n",
+            "{'sha224', 'shake_128', 'sha3_384', 'sha512', 'sha1', 'blake2s', 'blake2b', 'sha384', 'sha256', 'sha3_224', 'sha3_512', 'md5', 'sha3_256', 'shake_256'}\n"
           ],
           "name": "stdout"
         }
@@ -130,7 +130,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0cbee208-d451-419d-a480-edf50f0dbd55"
+        "outputId": "e768fec0-a412-4151-f330-cd6f68de7d88"
       },
       "source": [
         "import hashlib\n",
@@ -138,12 +138,12 @@
         "hash_object = hashlib.sha512(b'Hello World')\n",
         "print(hash_object.hexdigest())"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "b10a8db164e0754105b7a99be72e3fe5\n"
+            "2c74fd17edafd80e8447b0d46741ee243b7eb74dd2149a0ab1b9246fb30382f27e853d8585719e0e67cbda0daa8f51671064615d645ae27acb15bfb1447f459b\n"
           ],
           "name": "stdout"
         }
@@ -174,7 +174,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "689f846b-36a6-4048-c1ce-51b6b17eb88a"
+        "outputId": "afdfed22-e4de-4ac1-b61f-058683fc6088"
       },
       "source": [
         "import hashlib\n",
@@ -185,13 +185,13 @@
         "hash_object = hashlib.md5(mystring.encode())\n",
         "print(hash_object.hexdigest())"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Enter String to hash: \n",
-            "d41d8cd98f00b204e9800998ecf8427e\n"
+            "Enter String to hash: asdf\n",
+            "912ec803b2ce49e4a541068d495ab570\n"
           ],
           "name": "stdout"
         }
@@ -213,7 +213,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75fa7182-042c-4da6-bb88-775a3ec0565c"
+        "outputId": "95f8e89e-e934-4993-efa5-e6e2e1c4a5d0"
       },
       "source": [
         "import hashlib\n",
@@ -223,7 +223,7 @@
         " \n",
         "print(hex_dig)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "456ddfb3-bcb4-4e5d-9a0b-a9eaf076be9f"
+        "outputId": "bfd0afd2-f787-4b75-e73f-5e09f1121eb8"
       },
       "source": [
         "import hashlib\n",
@@ -260,7 +260,7 @@
         " \n",
         "print(hex_dig)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c8afeca6-46e1-4ed6-fe76-6ed0b0f353ca"
+        "outputId": "2dbbd8a8-a9a4-45ea-9bca-c46872bc7a7b"
       },
       "source": [
         "import hashlib\n",
@@ -297,7 +297,7 @@
         " \n",
         "print(hex_dig)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13f198f0-8af8-49d9-c714-fdf1c1393474"
+        "outputId": "d4bc83da-d0c7-416a-9e60-5c1aa74d7b8d"
       },
       "source": [
         "import hashlib\n",
@@ -334,7 +334,7 @@
         " \n",
         "print(hex_dig)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09478de9-2d00-423d-9b5a-fa1ac79e939f"
+        "outputId": "f92faf11-5867-4939-e08a-e60e11d62716"
       },
       "source": [
         "import hashlib\n",
@@ -371,7 +371,7 @@
         " \n",
         "print(hex_dig)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,17 +407,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b9418fdc-2da4-488a-a5d3-f7802197da5e"
+        "outputId": "aa264f9f-23a7-489e-c707-7c9ba150f7ae"
       },
       "source": [
         "print(hashlib.algorithms_available)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'sha512', 'sha3_512', 'blake2s256', 'sha224', 'sha3_384', 'blake2s', 'sha512-224', 'sha3-512', 'ripemd160', 'blake2b', 'sha256', 'sm3', 'shake128', 'md5', 'sha3_256', 'sha384', 'sha512-256', 'sha1', 'sha3-384', 'shake_256', 'whirlpool', 'shake256', 'sha3_224', 'blake2b512', 'md4', 'sha3-224', 'sha3-256', 'shake_128', 'md5-sha1'}\n"
+            "{'sha224', 'shake_128', 'sha3_384', 'sha512', 'sha1', 'blake2s', 'blake2b', 'sha384', 'sha256', 'sha3_224', 'sha3_512', 'md5', 'sha3_256', 'shake_256'}\n"
           ],
           "name": "stdout"
         }
@@ -430,7 +430,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7ff63553-7ec8-4548-aa6f-ba2dbec7ab0b"
+        "outputId": "406541c5-cdc7-43df-c5d2-f30f3342c745"
       },
       "source": [
         "import hashlib\n",
@@ -440,7 +440,7 @@
         " \n",
         "print(hash_object.hexdigest())"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ASZPNYhvR4nm"
+        "id": "ASZPNYhvR4nm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3bb372dc-41d9-4f7c-d827-936c07cc542c"
       },
       "source": [
         "import uuid\n",
@@ -497,8 +501,19 @@
         "else:\n",
         "    print('Извините, но пароли не совпадают')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Введите пароль: 123\n",
+            "Строка для хранения в базе данных: 99297cc3e3f3e065008f92bb81b17a6ccb3fa7e2dbed13f629487bd7e2f6e548:4c19778cc3624807960e245b33930fb4\n",
+            "Введите пароль еще раз для проверки: 123\n",
+            "Вы ввели правильный пароль\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -508,7 +523,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     }
   ]
